# novelenv

./: .fcrc  .gitignore  .novel-config.toml  .wvignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  MIGRATION_fcrc_to_find_context.md  README.md  SCALE_MANAGEMENT_GUIDE.md  SCALE_MANAGEMENT_IMPLEMENTATION.md  find_context.toml.example  install-permanent.sh  install.sh  link-from-project.sh  move-all-to-project.sh  move-to-project.sh  novelenv.toml.example  run_claude_command.sh
.claude/commands/: char-lint.md  char-slim.md  check-scale.md  consult-series.md  generate-prompt.md  reality-lint.md  review-prep.md  sketch.md  summ.md
character_profile/: アベル.md  ハンナ.md
cli-tools/: Makefile.toml  data_issue.md
cli-tools/context-weaver/: Cargo.toml  README.md
cli-tools/context-weaver/src/: main.rs  models.rs
cli-tools/context-weaver/src/handlers/: mod.rs
cli-tools/context-weaver/src/services/: file_scanner.rs  mod.rs  narrative_store.rs
cli-tools/context-weaver/static/: app.js  index.html  style.css
cli-tools/dump-episode-info/: Cargo.toml  README.md
cli-tools/novel-init/: Cargo.toml  README.md
cli-tools/novel-init/src/: main.rs
cli-tools/profile/: Cargo.toml  DESIGN.md  README.md
cli-tools/profile/src/: main.rs  models.rs
cli-tools/profile/src/analyzer/: dialogue.rs  mod.rs  rhythm.rs  sentence.rs  stats.rs
cli-tools/profile/src/parser/: brackets.rs
cli-tools/profile/src/report/: chart.rs  display.rs  json.rs  mod.rs
templates/: .novel-config.toml
writing_style/: always.md  combat_heroic.md  combat_tension.md  emotion_focused.md  horror.md  moukoben.md  psycho_horror.md  psychological_horror.md  romantic_comedy.md  scale_management.md  sensual.md  splatter_horror.md
(+29 files in other folders)
