[package]
name = "novel-init"
version = "0.1.0"
edition = "2021"
description = "Novel project initialization tool"

[[bin]]
name = "novel-init"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }