[package]
name = "profile"
version = "0.1.0"
edition = "2021"
authors = ["NovelEnv Contributors"]
description = "Text profiling tool for analyzing writing style in novels"
license = "MIT"

[dependencies]
# Core parsing
nom = "7.1"

# CLI interface
clap = { version = "4.5", features = ["derive"] }

# Data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unicode handling
unicode-segmentation = "1.10"

# Terminal output
comfy-table = "7.1"
colored = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
